hphp/test/zend/bad/Zend/tests/use_function/conditional_function_declaration.php
<?php

if (0) {
    function foo() {
    }
}

use function bar\foo;

echo "Done";

?>
